# Agadir-gdg-slides-code

./: .env_example  prompt.py  pyproject.toml  tools.py
code/: my_agent.py
